# DPPcoresets

./: .gitignore  README.md  logistic copy 2.ipynb  logistic copy 3.ipynb  logistic copy 4.ipynb  logistic copy.ipynb  logistic.ipynb  pyproject.toml  tests.ipynb
.github/workflows/: main.yml
journal/: biblio.bib  main.tex  main2.tex  main3.tex  main4.tex  style.sty  style_nips.sty  thesis.sty
journal/parts/: chapter1.tex  chapter2.tex  chapter3.tex  chapter4.tex
notebook/: interfaces.py  kmeans.ipynb  logistic.ipynb  main.ipynb  samplers.py  stpeter.ipynb  test.ipynb  utils.py
src/: samplers.py  utils.py
